// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentsList When parent is Target Document should treat all Attachments as read only 1`] = `
<div
  className="attachments-list-parent"
>
  <div
    className="attachments-list-header"
  >
    <h2>
      <Translate>
        Supporting files
      </Translate>
    </h2>
  </div>
  <div
    className="attachments-list"
  >
    <Connect(Component)
      entity={
        Object {
          "sharedId": "parentId",
        }
      }
      file={
        Object {
          "filename": "filename2.ext",
          "originalname": "A Human name 2",
        }
      }
      isSourceDocument={false}
      key="0"
      parentId="parentId"
      parentSharedId="parentSharedId"
      readOnly={true}
      storeKey="storeKey"
    />
    <Connect(Component)
      entity={
        Object {
          "sharedId": "parentId",
        }
      }
      file={
        Object {
          "filename": "filename1.ext",
          "originalname": "Human name 1",
        }
      }
      isSourceDocument={false}
      key="1"
      parentId="parentId"
      parentSharedId="parentSharedId"
      readOnly={true}
      storeKey="storeKey"
    />
  </div>
</div>
`;

exports[`AttachmentsList should render a sorted list of attachments (files) 1`] = `
<div
  className="attachments-list-parent"
>
  <div
    className="attachments-list-header"
  >
    <h2>
      <Translate>
        Supporting files
      </Translate>
    </h2>
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <div
        className="attachment-add"
      >
        <Connect(UploadSupportingFile)
          entitySharedId="parentSharedId"
          storeKey="storeKey"
        />
      </div>
    </Connect(NeedAuthorization)>
  </div>
  <div
    className="attachments-list"
  >
    <Connect(Component)
      entity={
        Object {
          "sharedId": "parentId",
        }
      }
      file={
        Object {
          "filename": "filename2.ext",
          "originalname": "A Human name 2",
        }
      }
      isSourceDocument={false}
      key="0"
      parentId="parentId"
      parentSharedId="parentSharedId"
      readOnly={false}
      storeKey="storeKey"
    />
    <Connect(Component)
      entity={
        Object {
          "sharedId": "parentId",
        }
      }
      file={
        Object {
          "filename": "filename1.ext",
          "originalname": "Human name 1",
        }
      }
      isSourceDocument={false}
      key="1"
      parentId="parentId"
      parentSharedId="parentSharedId"
      readOnly={false}
      storeKey="storeKey"
    />
  </div>
</div>
`;

exports[`AttachmentsList when files is empty should add button in Downloads section 1`] = `
<div
  className="attachments-list-parent"
>
  <div
    className="attachments-list-header"
  >
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <h2>
        <Translate>
          Supporting files
        </Translate>
      </h2>
    </Connect(NeedAuthorization)>
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <div
        className="attachment-add"
      >
        <Connect(UploadSupportingFile)
          entitySharedId="parentSharedId"
          storeKey="storeKey"
        />
      </div>
    </Connect(NeedAuthorization)>
  </div>
  <div
    className="attachments-list"
  />
</div>
`;

exports[`AttachmentsList when files is empty should render nothing if user not logged in 1`] = `
<div
  className="attachments-list-parent"
>
  <div
    className="attachments-list-header"
  >
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <h2>
        <Translate>
          Supporting files
        </Translate>
      </h2>
    </Connect(NeedAuthorization)>
    <Connect(NeedAuthorization)
      orWriteAccessTo={
        Array [
          Object {
            "sharedId": "parentId",
          },
        ]
      }
      roles={
        Array [
          "admin",
          "editor",
        ]
      }
    >
      <div
        className="attachment-add"
      >
        <Connect(UploadSupportingFile)
          entitySharedId="parentSharedId"
          storeKey="storeKey"
        />
      </div>
    </Connect(NeedAuthorization)>
  </div>
  <div
    className="attachments-list"
  />
</div>
`;

exports[`AttachmentsList when it is read only should not display the upload button 1`] = `
<div
  className="attachments-list-parent"
>
  <div
    className="attachments-list-header"
  >
    <h2>
      <Translate>
        Supporting files
      </Translate>
    </h2>
  </div>
  <div
    className="attachments-list"
  >
    <Connect(Component)
      entity={
        Object {
          "sharedId": "parentId",
        }
      }
      file={
        Object {
          "filename": "filename2.ext",
          "originalname": "A Human name 2",
        }
      }
      isSourceDocument={false}
      key="0"
      parentId="parentId"
      parentSharedId="parentSharedId"
      readOnly={true}
      storeKey="storeKey"
    />
    <Connect(Component)
      entity={
        Object {
          "sharedId": "parentId",
        }
      }
      file={
        Object {
          "filename": "filename1.ext",
          "originalname": "Human name 1",
        }
      }
      isSourceDocument={false}
      key="1"
      parentId="parentId"
      parentSharedId="parentSharedId"
      readOnly={true}
      storeKey="storeKey"
    />
  </div>
</div>
`;
